# cursocog

./: .cursorrules  CHOCO.md  CMakeLists-new.txt  CMakeLists.txt  README-basic.md  README-new.md  README-windows.md  README.md  TODO.md  build.ps1  build.sh  cleanup-git.ps1  clone-basic.ps1  clone-basic.sh  clone_repos.ps1  clone_repos.sh  coginit.ps1  coginit.sh  disconnect-external-git.ps1  install-dependencies.ps1  install-dependencies.sh  repos-basic.txt  repos.txt  setup-opencog-docker.ps1  setup-opencog-wsl.ps1  unlink-submodules.ps1
.circleci/: config-new.yml
.cursor/rules/: opencog-build.md  opencog-build.mdc
atomspace/doc/doxydoc/: libatomspace.dox  libattention.dox  libhaskell.dox  libpersist.dox  libsmob.dox
clay-ui/: CMakeLists.txt  README.md  download.ps1  download.sh
clay-ui/cmake/: clay-ui-config.cmake.in
clay-ui/examples/: README.md  atomspace_viewer.cpp  dashboard.cpp  real_time_visualization_demo.cpp  simple_window.c
clay-ui/include/: atom_visualizer.h  opencog_atomspace_bridge.h  opencog_clay_bindings.h  opencog_renderer.h
clay-ui/src/: OptimizedGraphRenderer.cpp  RealTimeAtomSpaceVisualizer.cpp  atom_visualizer.cpp  build_dashboard.cpp  build_dashboard.h  dashboard.cpp  opencog_atomspace_bridge.cpp  opencog_clay_bindings.cpp  opencog_renderer.c
clay-ui/src/include/opencog/: OptimizedGraphRenderer.h  RealTimeAtomSpaceVisualizer.h
coginit/: .gitignore  README.md  dependencies.json
coginit/docs/: boost_windows.md
coginit/scripts/: install-linux.sh  install-windows.ps1  verify-linux.sh  verify-windows.ps1
cogutil/: CMakeLists.txt  windows_patches.h
cogutil/opencog/util/: CMakeLists.txt  Config.cc  Logger.cc  StringTokenizer.cc  ansi.cc  exceptions.cc  files.cc  fix_includes.ps1  getopt.cc  getopt.h  getopt_long.cc  lazy_normal_selector.cc  lazy_random_selector.cc  lazy_selector.cc  lazy_selector.h  log_prog_name.cc  misc.cc  mt19937ar.cc  numeric.h  oc_assert.cc  oc_assert.h  oc_omp.cc  octime.cc  platform.cc  platform.h  strndup.cc  strnlen.cc  tree.cc
examples/opencog-basic/: README.md  atomspace_cogserver_demo.py  atomspace_demo.py  atomspace_rocksdb_demo.py  build_instructions.md  minimal_atomspace_example.py  monitor_components.py  pattern_matching_demo.py  visualize_mock.py
opencog-basic/: .gitignore  CMakeLists.txt  README.md  build.ps1  clay-ui-integration.ps1  clay-ui-integration.sh  coginit-integration.sh  create-chocolatey-package.ps1  create-packages.sh  create-windows-installer.ps1  install-dependencies.ps1  integrate-clay-ui.ps1  integrate-clay-ui.sh  opencog-dashboard.bat  opencog-dashboard.sh  test-clay-ui.ps1  test-clay-ui.sh
opencog-basic/clay-ui/: CMakeLists.txt
opencog-basic/clay-ui/cmake/: clay-ui-config.cmake.in
opencog-basic/clay-ui/examples/: dashboard_launcher.cpp
opencog-basic/examples/atomspace-examples/: README.md  basic_atomspace.scm  pattern_matching.scm  populate_rocksdb.scm
profiles/: development.ps1  development.sh  minimal.ps1  minimal.sh
scripts/: README-verify-dependencies.md  auto-update.ps1  auto-update.py  auto-update.sh  component-config.ps1  component-config.sh  component-health-monitor.py  create-macos-package.sh  incremental-build.ps1  incremental-build.sh  integration-test.py  verify-dependencies.ps1  verify-dependencies.py  verify-dependencies.sh
tests/integration/: test_atomspace_cogserver.py  test_clay_ui_atomspace.py
util/: cpp_keywords.h  files.cc  lazy_selector.cc  lazy_selector.h  macros.h  numeric.h  platform.cc  platform.h  tree.cc  winstrings.h  winunistd.h
wiki/chat/: 2024_07_17_20_00_Clay_UI_integration.md  2024_07_17_21_00_OpenCog_Build_System_Progress.md  2024_07_18_00_00_OpenCog_Build_Progress.md  2024_07_18_Lets_Build_It.md
